--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,2 +1,19 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts/fonts.css);
+
+@import url(../blocks/page.css);
+@import url(../blocks/header.css);
+@import url(../blocks/footer.css);
+@import url(../blocks/link.css);
+@import url(../blocks/intro.css);
+@import url(../blocks/about.css);
+@import url(../blocks/services.css);
+@import url(../blocks/card.css);
+@import url(../blocks/gallery.css);
+@import url(../blocks/slider.css);
+@import url(../blocks/slide.css);
+@import url(../blocks/list-item.css);
+@import url(../blocks/contacts.css);
+@import url(../blocks/clients.css);
+@import url(../blocks/modal.css);
+@import url(../blocks/menu.css);
