--- a/src/blocks/about.css
+++ b/src/blocks/about.css
@@ -1,24 +1,18 @@
-.about {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  padding-top: 80px;
-  padding-bottom: 60px;
-}
-
 .about__paragraph {
   margin-top: 0;
   margin-bottom: 20px;
 
-  font-size: 20px;
+  font-size: var(--fs-accent-content-text);
   line-height: 1.4;
   font-weight: 400;
 }
 
+.about__paragraph:last-of-type {
+  margin-bottom: 0;
+}
 
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 600px) {
   .about__paragraph {
-    font-size: 16px;
+    margin-bottom: 12px;
   }
 }
