--- a/src/blocks/clients.css
+++ b/src/blocks/clients.css
@@ -4,11 +4,30 @@
 
 .clients__link {
   width: 100%;
-  display: flex;
-  align-items: center;
+  height: 100%;
+  display: block;
 }
 
 .clients__logo {
   display: block;
   width: 100%;
+}
+
+.clients__slider {
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+
+.clients__slide {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+@media screen and (max-width: 420px) {
+  .clients {
+    padding-bottom: 36px;
+  }
 }
