--- a/src/blocks/header.css
+++ b/src/blocks/header.css
@@ -6,11 +6,12 @@
 
   width: 100%;
 
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(5, 8, 20, 0.6);
+  transition: transform .3s ease;
 }
 
 .header_hidden {
-  display: none;
+  transform: translateY(-100%);
 }
 
 .header__container {
@@ -18,6 +19,7 @@
   align-items: center;
   justify-content: space-between;
 
+  padding-top: 0;
   min-height: 60px;
 }
 
@@ -27,18 +29,7 @@
 }
 
 .header__icon {
-  margin-right: 20px;
-  width: 36px;
   height: 36px;
-
-  fill: white;
-}
-
-.header__label {
-  font-weight: 900;
-  font-size: 24px;
-  line-height: 1;
-  letter-spacing: 1.6px;
 }
 
 .header__wa-btn {
@@ -53,26 +44,34 @@
   outline: none;
 }
 
+.header__wa-btn:focus .header__telephone {
+  color: var(--color-3);
+}
+
+.header__wa-btn:focus .header__wa-icon {
+  fill: #5fe764;
+}
+
 .header__wa-btn:hover .header__wa-icon {
   fill: #5fe764;
 }
 
 .header__wa-btn:hover .header__telephone {
-  color: var(--color-2);
+  color: var(--color-3);
 }
 
 .header__wa-icon {
   margin-right: 10px;
-  width: 30px;
-  height: 30px;
-  fill: white;
+  width: 28px;
+  height: 28px;
+  fill: var(--color-alt-text);
   transition: fill 0.3s ease;
 }
 
 .header__telephone {
-  font-size: 18px;
+  font-size: var(--fs-content-text);
   font-weight: 500;
-  color: white;
+  color: var(--color-alt-text);
   transition: color 0.3s ease;
 }
 
@@ -97,15 +96,23 @@
   width: 30px;
   height: 30px;
 
-  fill: white;
+  fill: var(--color-alt-text);
   transition: fill 0.3s ease;
 }
 
 .header__menu:hover .header__menu-icon {
-  fill: var(--color-2);
+  fill: var(--color-3);
 }
 
-@media screen and (max-width: 620px) {
+.header__menu:focus {
+  outline: none;
+}
+
+.header__menu:focus .header__menu-icon {
+  fill: var(--color-3);
+}
+
+@media screen and (max-width: 600px) {
   .header__wa-btn {
     display: none;
   }
