--- a/src/blocks/menu.css
+++ b/src/blocks/menu.css
@@ -1,4 +1,5 @@
 .menu {
+  --fs-link: 24px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -18,12 +19,12 @@
 }
 
 .menu__link {
-  color: var(--text-color);
+  color: var(--color-alt-text);
   text-decoration: none;
 
   margin-bottom: 40px;
 
-  font-size: 24px;
+  font-size: var(--fs-link);
   font-weight: 500;
   transition: color 0.3s ease;
 }
@@ -33,11 +34,11 @@
 }
 
 .menu__link:hover {
-  color: var(--color-2);
+  color: var(--color-3);
 }
 
 .menu__link:focus {
-  color: var(--color-2);
+  color: var(--color-3);
   outline: none;
 }
 
@@ -47,7 +48,7 @@
 
   margin: 60px 0;
   width: 100px;
-  height: 2px;
+  height: 4px;
 
-  background-color: var(--color-2);
+  background-color: var(--color-3);
 }
