--- a/src/blocks/slide.css
+++ b/src/blocks/slide.css
@@ -7,7 +7,7 @@
   position: relative;
   width: 100%;
   height: 0;
-  padding-bottom: 60%;
+  padding-bottom: 66%;
 
   text-align: center;
   overflow: hidden;
@@ -24,4 +24,10 @@
 
   object-fit: cover;
   max-width: 100%;
+  cursor:zoom-in;
+}
+
+.slide__description {
+  margin: 20px 60px 0 0;
+  overflow: hidden;
 }
