--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -7,9 +7,7 @@
 @import url(../blocks/link.css);
 @import url(../blocks/intro.css);
 @import url(../blocks/about.css);
-@import url(../blocks/services.css);
 @import url(../blocks/card.css);
-@import url(../blocks/gallery.css);
 @import url(../blocks/slider.css);
 @import url(../blocks/slide.css);
 @import url(../blocks/list-item.css);
@@ -17,3 +15,4 @@
 @import url(../blocks/clients.css);
 @import url(../blocks/modal.css);
 @import url(../blocks/menu.css);
+@import url(../blocks/animation.css);
