--- a/src/blocks/slider.css
+++ b/src/blocks/slider.css
@@ -2,6 +2,12 @@
   position: relative;
 }
 
+.slider__wrapper {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
 .slider__buttons {
   position: absolute;
   top: 0;
