--- a/src/blocks/clients.css
+++ b/src/blocks/clients.css
@@ -17,6 +17,9 @@
   display: flex;
   align-items: center;
   height: 100%;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .clients__slide {
