--- a/src/blocks/menu.css
+++ b/src/blocks/menu.css
@@ -10,12 +10,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 40px;
 
   margin: 0;
   padding: 0;
 
   list-style: none;
+}
+
+.menu__list-item {
+  margin-bottom: 40px;
+}
+
+.menu__list-item:last-of-type {
+  margin-bottom: 0;
 }
 
 .menu__link {
