--- a/src/blocks/slide.css
+++ b/src/blocks/slide.css
@@ -3,11 +3,15 @@
   flex-direction: column;
 }
 
+.slide__container {
+  margin: 0;
+}
+
 .slide__image-container {
   position: relative;
   width: 100%;
   height: 0;
-  padding-bottom: 66%;
+  padding-bottom: 56.25%;
 
   text-align: center;
   overflow: hidden;
